name:                haste-boostrap
version:             0.1.0.0
synopsis:            Idiomatic combinators for Bootstrap for the Haste compiler
description:         Twitter's Bootstrap combinators
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           Alfredo Di Napoli
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Haste.Bootstrap
  build-depends:
      base >= 4.0.0.0 && < 5
    , haste-compiler >= 0.4
  hs-source-dirs:
    src
  default-language:    Haskell2010